--- a/Nonsense.Web/Nonsense.Web.csproj
+++ b/Nonsense.Web/Nonsense.Web.csproj
@@ -6,14 +6,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="gulpfile.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="gulpfile.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="1.0.172" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Features\Shared\" />
-    <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
