--- a/Nonsense.Application/Nonsense.Application.csproj
+++ b/Nonsense.Application/Nonsense.Application.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.8.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Nonsense.Common\Nonsense.Common.csproj" />
   </ItemGroup>
 
