--- a/Nonsense.Infrastructure/Nonsense.Infrastructure.csproj
+++ b/Nonsense.Infrastructure/Nonsense.Infrastructure.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.8.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
   
