--- a/Nonsense.MvcApp/appsettings.json
+++ b/Nonsense.MvcApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "IdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Database=NonsenseIdentity;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "FlickrService": {
     "Uri": "https://api.flickr.com/services/rest/",
     "ApiKey": "bda33e70c77f4ff7d44d07a41c8e9fca"
