--- a/Nonsense.Domain/Nonsense.Domain.csproj
+++ b/Nonsense.Domain/Nonsense.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Nonsense.Common\Nonsense.Common.csproj" />
+  </ItemGroup>
+
 </Project>
