--- a/Nonsense.MvcApp/Nonsense.MvcApp.csproj
+++ b/Nonsense.MvcApp/Nonsense.MvcApp.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="Areas\Admin\Features\Users\Create.cshtml" />
+    <None Include="Areas\Admin\Features\Users\Edit.cshtml" />
+    <None Include="Areas\Admin\Features\Users\Index.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
