--- a/Nonsense.MvcApp/Nonsense.MvcApp.csproj
+++ b/Nonsense.MvcApp/Nonsense.MvcApp.csproj
@@ -6,9 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="Areas\Admin\Features\Users\Create.cshtml" />
-    <None Include="Areas\Admin\Features\Users\Edit.cshtml" />
-    <None Include="Areas\Admin\Features\Users\Index.cshtml" />
+    <None Include="Areas\Admin\Features\Accounts\Create.cshtml" />
+    <None Include="Areas\Admin\Features\Accounts\Edit.cshtml" />
+    <None Include="Areas\Admin\Features\Accounts\Index.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
