Add the pagination to the admin part Accounts page.

--- a/Nonsense.Infrastructure/Nonsense.Infrastructure.csproj
+++ b/Nonsense.Infrastructure/Nonsense.Infrastructure.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="SeedData\ApplicationUsers.csv" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="SeedData\ApplicationUsers.csv" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autofac" Version="4.8.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
